{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "74a2d63c-d56e-40c1-8fb3-b5d863329bd9",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "ceb9857a-5f9b-4280-9829-6449daf0daca",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "b4de5da9-c326-427e-8001-67ca6e0e5b2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "2b897f4b-fc28-43c5-a522-c69442704706",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ExitPuzzle",
                    "type": "Button",
                    "id": "2a54affd-5f79-4bb0-b3bf-58e6880ec4b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "evaluateSolution",
                    "type": "Button",
                    "id": "7e46c209-a5f4-4ece-8eb5-edd6dcd61968",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Axis",
                    "id": "0bf53775-7fbe-4d75-929b-e14a8457f91b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "849924d9-3b2e-473d-a60d-043ddfe14419",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stnd KBM",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8466c131-468d-478a-99ab-b6dd2966b57e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stnd KBM",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8c9540d2-1729-4ac3-a9ca-ec27cae85a1f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stnd KBM",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "256fff70-0bd2-40e4-b5f7-96510458a96c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stnd KBM",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "39ed72fd-1f47-4b07-9178-73b1dd2d1e78",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "xboxcontroller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5300fa11-f126-4697-8ccb-5020722b0397",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stnd KBM",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afcc40d2-e23f-4323-bd0a-d6918a3ee0b6",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stnd KBM",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "125b7564-f804-44d0-aeb7-1768ea5c58d0",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stnd KBM",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1362b017-5dac-4a05-b539-af7917f1d25b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=7,y=7)",
                    "groups": "Stnd KBM",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45eb080b-dbfe-4265-9a68-72645599fb2e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stnd KBM",
                    "action": "ExitPuzzle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9774996-7d0f-40a0-a8e5-722c86a490d3",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stnd KBM",
                    "action": "evaluateSolution",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PuzzleDEBUGGER",
            "id": "2941194f-298e-48b1-aaf1-fb18798b700f",
            "actions": [
                {
                    "name": "calculate solution",
                    "type": "Button",
                    "id": "33f15d10-f9d5-48f4-a23d-a8db1dd4a753",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShowSolution",
                    "type": "Button",
                    "id": "476d96cc-4f16-4a60-ad17-b3c6a7baaee2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PressAnyButton",
                    "type": "Button",
                    "id": "4cee70df-5b01-4643-b4a7-07b5940c8d1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BlindMode",
                    "type": "Button",
                    "id": "0138de2d-e3ea-4925-93cf-c16dd65d3f07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AutoPilotPuzzle",
                    "type": "Button",
                    "id": "648b08b0-9ce0-4edf-af91-51b979ec98d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleFullAutopilot",
                    "type": "Button",
                    "id": "b43aed17-b847-4357-877b-702de380e37c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5f86de9b-62f1-4b3a-bff5-42d8dd09a060",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stnd KBM",
                    "action": "calculate solution",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d27998a-7002-42fa-b7ef-974c6a33875e",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowSolution",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "155990f9-3485-4830-8b4c-04a80baf5ed8",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressAnyButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6322b77d-980c-47e7-b9e8-609edab09bd1",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlindMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "182fe015-1281-4589-8258-eaae32a5c0dd",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stnd KBM",
                    "action": "AutoPilotPuzzle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30075741-e858-4240-945d-1ab19523366a",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stnd KBM",
                    "action": "ToggleFullAutopilot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "96df4aaa-4b8b-4edb-843e-d362b8f1da9f",
            "actions": [
                {
                    "name": "BackToMain",
                    "type": "Button",
                    "id": "5f8c38ae-35dd-43b1-89c0-ca5b8464fe39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RestartScene",
                    "type": "Button",
                    "id": "ebe1deb2-5145-4161-8cf2-597a196a11c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1cc9bc13-ef3d-4191-8a52-669d97249e5d",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackToMain",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c988f0bb-2ac0-4809-8cf9-b515e48b9b97",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestartScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Stnd KBM",
            "bindingGroup": "Stnd KBM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<VirtualMouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "xboxcontroller",
            "bindingGroup": "xboxcontroller",
            "devices": [
                {
                    "devicePath": "<XboxOneGampadiOS>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}